Changed size of images to prevent distortion

--- a/css/layouts/development.css
+++ b/css/layouts/development.css
@@ -8,7 +8,6 @@
 
 #prepclub-mockup {
   width: 45vw;
-  height: 500px;
   align-items: center;
 }
 
