--- a/css/layouts/uiux.css
+++ b/css/layouts/uiux.css
@@ -8,7 +8,6 @@
 
 #uiux-mockup {
   width: 45vw;
-  height: 500px;
 }
 
 .uiux-content-right {
